# transformer-prosailvae

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/simulated_dataset/: test_angles_loc.pt  test_angles_scale.pt  test_idx_loc.pt  test_idx_scale.pt  test_norm_mean.pt  test_norm_std.pt  test_prosail_s2_sim_refl.pt  test_prosail_sim_vars.pt  train_angles_loc.pt  train_angles_scale.pt  train_idx_loc.pt  train_idx_scale.pt  train_norm_mean.pt  train_norm_std.pt  valid_angles_loc.pt  valid_angles_scale.pt  valid_idx_loc.pt  valid_idx_scale.pt  valid_norm_mean.pt  valid_norm_std.pt  valid_prosail_s2_sim_refl.pt  valid_prosail_sim_vars.pt
dataset/: create_enmap_rsr.py  dataset_utils.py  generate_dataset.py  loaders.py
metrics/: metrics_utils.py  prosail_plots.py  results.py
tests/: test_SensorSimulator.py  test_simvae.py  test_train.py
trained_models/transformer/: angles_loc.pt  angles_scale.pt  config.json  idx_loc.pt  idx_scale.pt  norm_mean.pt  norm_std.pt  results_directory_names.txt
trained_models/transformer/loss/: train_loss.csv  valid_loss.csv
tvae/assets/icml2025/: example_paper copy.aux  example_paper copy.blg  example_paper copy.fdb_latexmk  example_paper copy.fls  example_paper copy.tex  example_paper.aux  example_paper.fdb_latexmk  example_paper.fls  example_paper.tex  word.docx
tvae/scripts/: generate_prosail_dataset.sh  run_sentinel2_training.sh  run_transformer_training.sh  run_validation.sh
tvae/tvae/: ProsailSimus.py  decoders.py  encoders.py  latentspace.py  loss.py  prosail_dataclasses.py  prosail_vae.py  prosail_var_dists.py  simspaces.py  simvae.py  spectral_indices.py  train.py
utils/: TruncatedNormal.py  image_utils.py  utils.py
validation/: belsar.py  frm4veg_validation.py  validation.py  validation_utils.py
validation_results/unified/belsar/: BelSAR_All_lai_all_summary.csv  BelSAR_Maize_lai_maize_summary.csv  belsar_validation_summary.txt  validation_summary.csv
validation_results/unified/belsar/all/: BelSAR_All_lai_all_detailed.csv  belsar_metrics_all_1_sim_tg_mean.csv  validation_summary.csv
validation_results/unified/belsar/maize/: BelSAR_Maize_lai_maize_detailed.csv  belsar_metrics_maize_1_sim_tg_mean.csv  validation_summary.csv
validation_results/unified/belsar/wheat/: BelSAR_Wheat_lai_wheat_detailed.csv  BelSAR_Wheat_lai_wheat_summary.csv  belsar_metrics_wheat_1_sim_tg_mean.csv  validation_summary.csv
validation_results/unified/combined/: combined_ccc_validation_20250427_202455.csv  combined_lai_validation_20250427_202455.csv  validation_metrics_summary_20250427_202455.txt
validation_results/unified/frm4veg/frm4veg_barrax2018/: frm4veg_barrax2018_ccc_detailed.csv  frm4veg_barrax2018_ccc_eff_detailed.csv  frm4veg_barrax2018_ccc_eff_summary.csv  frm4veg_barrax2018_ccc_summary.csv  frm4veg_barrax2018_lai_detailed.csv  frm4veg_barrax2018_lai_eff_detailed.csv  frm4veg_barrax2018_lai_eff_summary.csv  frm4veg_barrax2018_lai_summary.csv  validation_summary.csv
validation_results/unified/frm4veg/frm4veg_barrax2021/: frm4veg_barrax2021_ccc_detailed.csv  frm4veg_barrax2021_ccc_eff_detailed.csv  frm4veg_barrax2021_ccc_eff_summary.csv  frm4veg_barrax2021_ccc_summary.csv  frm4veg_barrax2021_lai_detailed.csv  frm4veg_barrax2021_lai_eff_detailed.csv  frm4veg_barrax2021_lai_eff_summary.csv  frm4veg_barrax2021_lai_summary.csv  (+1 more)
(+9 files in other folders)
